[package]
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "IPC server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ipc-server/"
edition = "2018"
homepage = "https://github.com/axiatech/jsonrpc"
license = "MIT"
name = "jsonrpc-ipc-server"
repository = "https://github.com/axiatech/jsonrpc"
version = "18.0.0"

[dependencies]
futures = "0.3"
log = "0.4"
tower-service = "0.3"
jsonrpc-core = { version = "18.0.0", path = "../core" }
jsonrpc-server-utils = { version = "18.0.0", path = "../server-utils", default-features = false }
axia-tokio-ipc = { git = "https://github.com/axia-tech/axia-tokio-ipc", branch = "v0.9.0", version = "0.9.0" }

parking_lot = "0.11.0"

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio = { version = "1", default-features = false, features = ["net", "time", "rt-multi-thread"] }

[badges]
travis-ci = { repository = "axiatech/jsonrpc", branch = "master"}
