[package]
name = "jsonrpc-pubsub-examples"
description = "Examples of Publish-Subscribe extension for jsonrpc."
homepage = "https://github.com/axiatech/jsonrpc"
repository = "https://github.com/axiatech/jsonrpc"
version = "18.0.0"
authors = ["tomusdrw <tomasz@axiacoin.network>"]
license = "MIT"

[dependencies]
jsonrpc-core = { version = "18.0.0", path = "../../core" }
jsonrpc-pubsub = { version = "18.0.0", path = "../" }
jsonrpc-ws-server = { version = "18.0.0", path = "../../ws" }
jsonrpc-ipc-server = { version = "18.0.0", path = "../../ipc" }
